--- a/src/portal/lib/src/helm-chart/helm-chart.component.scss
+++ b/src/portal/lib/src/helm-chart/helm-chart.component.scss
@@ -12,7 +12,7 @@ $size60:60px;
     .toolbar {
         overflow: hidden;
         .rightPos {
-            @include grid-left-top-pos;
+            @include grid-right-top-pos;
             margin-top: 20px;
             .filter-divider {
                 display: inline-block;
