--- a/src/portal/src/app/project/project-detail/project-detail.component.html
+++ b/src/portal/src/app/project/project-detail/project-detail.component.html
@@ -22,6 +22,9 @@
         <li class="nav-item" *ngIf="isSystemAdmin || isMember">
             <a class="nav-link" routerLink="logs" routerLinkActive="active">{{'PROJECT_DETAIL.LOGS' | translate}}</a>
         </li>
+        <li class="nav-item" *ngIf="isSProjectAdmin || isSystemAdmin">
+            <a class="nav-link" routerLink="robot-account" routerLinkActive="active">{{'PROJECT_DETAIL.ROBOT_ACCOUNTS' | translate}}</a>
+        </li>
         <li class="nav-item" *ngIf="isSessionValid && (isSystemAdmin || isMember)">
             <a class="nav-link" routerLink="configs" routerLinkActive="active">{{'PROJECT_DETAIL.CONFIG' | translate}}</a>
         </li>
