--- a/src/portal/src/app/shared/confirmation-dialog/confirmation-dialog.component.scss
+++ b/src/portal/src/app/shared/confirmation-dialog/confirmation-dialog.component.scss
@@ -17,6 +17,7 @@
     vertical-align: middle;
     width: 80%;
     white-space: pre-wrap;
+    word-break: break-all;
 }
 .batchInfoUl{
     padding: 20px; list-style-type: none;
