--- a/src/portal/lib/src/helm-chart/helm-chart.component.scss
+++ b/src/portal/lib/src/helm-chart/helm-chart.component.scss
@@ -13,6 +13,7 @@ $size60:60px;
         overflow: hidden;
         .rightPos {
             @include grid-left-top-pos;
+            margin-top: 20px;
             .filter-divider {
                 display: inline-block;
                 height: 16px;
