--- a/src/portal/lib/src/tag/tag.component.scss
+++ b/src/portal/lib/src/tag/tag.component.scss
@@ -65,7 +65,8 @@
   position: relative;
   padding-left: .5rem;
   padding-right: .5rem;
-  line-height: 1.0
+  line-height: 1.0;
+  height: 1.2rem;
 }
 
 .dropdown-menu input {
